# tartiflette

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .gitmodules  .isort.cfg  .pylintrc  .style.yapf  .travis.yml  CHANGELOG.md  CONTRIBUTORS.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  pylintrc  pyproject.toml  setup.cfg  setup.py  sonar-project.properties
.github/: dependabot.yml  main.workflow
.github/workflows/: ci.yml  codeql-analysis.yml  on_pull_requests.yml  push.yml  push_on_master.yml
changelogs/: 0.1.4.md  0.1.5.md  0.1.6.md  0.1.7.md  0.1.8.md  0.1.9.md  0.10.0.md  0.10.1.md  0.10.2.md  0.11.0.md  0.11.1.md  0.11.2.md  0.12.0.md  0.12.1.md  0.12.2.md  0.12.3.md  0.12.4.md  0.12.5.md  0.2.0.md  0.2.1.md  0.2.2.md  0.3.0.md  0.3.1.md  0.3.2.md  0.3.3.md  0.3.4.md  0.3.5.md  0.3.6.md  0.3.7.md  0.4.0.md  0.4.1.md  0.4.2.md  0.5.0.md  0.5.1.md  0.6.0.md  0.6.1.md  0.6.10.md  0.6.2.md  0.6.3.md  0.6.4.md  (+35 more)
docs/: API.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  getting-started.md  graphql-query-rules-missing.md  graphql-query-rules-supported.md  graphql-query-rules.md
docs/api/: directive.md  engine.md  error-handling.md  execution.md  resolver.md  scalar.md  schema-registry.md  subscription.md  type-resolver.md
docs/api-aiohttp/: getting-started.md
docs/migration-guides/: 0.x.x-to-1.0.x.md  0.x.x-to-1.x.x.md  migration-guide-0-0-to-1-0.md
docs/plugin/: introduction.md
docs/plugins/: create-a-plugin.md  currated-list.md  introduction.md  use-a-plugin.md
docs/roadmaps/: milestone-1.md  milestone-2.md
docs/tutorial/: add-subscription.md  create-server.md  dynamic-introspection.md  extend-with-directives.md  getting-started.md  install-tartiflette.md  project-initialization.md  rate-limit-fields-with-directives.md  running-a-mutation.md  running-a-query.md  running-a-subscription.md  use-with-docker.md  write-your-mutation-resolvers.md  write-your-resolvers.md
docs/welcome/: what-is-tartiflette.md
examples/aiohttp/: requirements.txt
github-actions/pypi/: Dockerfile  entrypoint.sh
github-actions/python/: Dockerfile
github-actions/release/: Dockerfile  entrypoint.sh
github-actions/shell/: Dockerfile  is_ref.sh
tartiflette/: __init__.py  directive.py  engine.py  introspection.py  resolver.py  resolver_decorator.py  schema.py  tartiflette.py
tartiflette/coercers/: argument.py  arguments.py  common.py  variables.py
tartiflette/collections/: unique_mapping.py
tartiflette/constants/: __init__.py  directive_locations.py  introspection.py  scalars.py  values.py
tartiflette/directive/: __init__.py  common.py  deprecated.py  directive.py  include.py  non_introspectable.py  skip.py
tartiflette/execution/: __init__.py  collect.py  context.py  execute.py  factory.py  helpers.py  parser.py  response.py  types.py  values.py
tartiflette/executors/: basic.py  helpers.py  types.py
tartiflette/hooks/: __init__.py
tartiflette/language/: utils.py
tartiflette/parser/: __init__.py  exceptions.py  parser.py  visitor.py
tartiflette/resolver/: __init__.py  default.py  factory.py  resolver.py  subscription.py  type_resolver.py
tartiflette/scalar/: __init__.py  boolean.py  custom_scalar.py  date.py  datetime.py  float.py  id.py  int.py  scalar.py  string.py  time.py
tartiflette/schema/: __init__.py  bakery.py  factory.py  introspection.py  registry.py  schema.py  transformer.py
tartiflette/sdl/: __init__.py  builder.py  query_resolver.py  schema.py  sdl_cli.py
tartiflette/subscription/: __init__.py  subscription.py
tartiflette/types/: argument.py  directive.py  enum.py  field.py  input_field.py  input_object.py  interface.py  list.py  location.py  non_null.py  object.py  scalar.py  schema_extension.py  type.py  union.py
tartiflette/utils/: arguments.py  callables.py  coerce_value.py  coercer.py  (+6 more)
tests/: conftest.py  schema_stack.py
(+685 files in other folders)
