[build-system]
requires = [
    "setuptools>=39.2.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line_length = 79
target-version = ["py36"]

[tool.isort]
profile = "black"
line_length = 79
known_first_party = [
    "tartiflette",
    "tests"
]
combine_as_imports = true
lines_between_types = 1
