[build-system]
requires = [
    "setuptools>=39.2.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line_length = 79
target-version = ["py36"]

[tool.isort]
profile = "black"
line_length = 79
known_first_party = [
    "tartiflette",
    "tests"
]
combine_as_imports = true
lines_between_types = 1

[tool.coverage.run]
data_file = "reports/.coverage"
omit = [
    "tests/*",
    "__init__.py"
]

[tool.coverage.report]
show_missing = true
