[metadata]
name = tartiflette
version = 1.4.1
description = GraphQL Engine for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://tartiflette.io
author = Dailymotion Core API Team
author_email = team@tartiflette.io
license = MIT
license_files = LICENSE
project_urls =
    Documentation = https://tartiflette.io
    Source code = https://github.com/tartiflette/tartiflette
    Changelog = https://github.com/tartiflette/tartiflette/blob/master/CHANGELOG.md
    Issue tracker = https://github.com/tartiflette/tartiflette/issues
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
keywords =
    api
    graphql
    protocol
    rest
    relay
    tartiflette
    dailymotion

[options]
python_requires = >=3.7
install_requires =
    cffi>=1.0.0,<2.0.0
    lark>=1.0.0,<2.0.0
packages = find:
include_package_data = True

[options.extras_require]
test =
    pytest==6.2.5
    pytest-cov==3.0.0
    pytest-asyncio==0.16.0
    pytest-xdist==2.4.0
    pylint==2.15.3
    black==21.8b0
    isort==5.10.1
benchmark = pytest-benchmark==3.4.1

[options.packages.find]
exclude = tests*
